# python-mscl

./: .gitignore  README.md  constants.py  download_and_extract_assets.py  hatch_build.py  main.py  pyproject.toml  run_build.py
.github/workflows/: build_wheels.yml
build_helpers/: release_downloader.py  release_extractor.py
mscl_release_assets/mscl-Windows-x86-Python3.11-v67.0.0/: mscl.py
mscl_release_assets/mscl-arm64-Python3.9-v67.0.0/: mscl.py
src/mscl/: __init__.py
