[project]
name = "python-mscl"
version = "67.0.0"
description = "Easy to install python wrapper for the MSCL library."
readme = "README.md"
authors = [
    { name = "Harshil", email = "37377066+harshil21@users.noreply.github.com" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
]
dependencies = []

[dependency-groups]
dev = ["ruff", "hatchling"]

[project.scripts]
main = "mscl.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mscl"]
artifacts = [
    "mscl.py",
    "_mscl.so",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
exclude = ["mscl_release_assets/", "uv.lock", "main.py"]

[build-system]
requires = ["hatchling", "requests", "pygithub"]
build-backend = "hatchling.build"

# RUFF:
[tool.ruff]
line-length = 100
target-version = "py313"
show-fixes = true
exclude = ["mscl_release_assets/"]

[tool.ruff.lint]
ignore = ["PLR2004", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PERF203", "ISC001"]
select = ["E", "F", "I", "PL", "UP", "RUF", "PTH", "C4", "B", "PIE", "SIM", "RET", "RSE",
          "G", "ISC", "PT", "ASYNC", "TCH", "SLOT", "PERF", "PYI", "FLY", "AIR", "Q", "INP", 
          "W", "YTT", "DTZ", "ARG", "T20", "FURB", "D100", "D101", "D300", "D418",
          "D419", "S", "NPY"]